solve some margin issus

--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
       <div class="carousel w-full mt-5">
         <div id="slide1" class="carousel-item relative w-full lg:h-[85vh]">
           <img src="./Images/1.png" class="w-full" />
+          <div class="hidden lg:block absolute right-0 bottom-0 p-7 mb-5 mr-5 bg-title-color rounded-lg">
+            <h1 class="text-2xl font-extrabol text-white">Meet all the heroes from the field</h1>
+            <p class="text-[rgba(255, 255, 255, 0.60)]">
+              Explore the prowess of hockey legends on <br> Sajib Hockey's website:
+              Meet all the heroes from the field.
+            </p>
+          </div>
           <div
             class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
           >
@@ -138,6 +145,14 @@
             <a href="#slide1" class="btn btn-circle">❯</a>
           </div>
         </div>
+      </div>
+      <!-- Extra section -->
+      <div class="block lg:hidden  p-7 m-1 bg-title-color rounded-lg">
+        <h1 class="text-2xl font-extrabol text-white">Meet all the heroes from the field</h1>
+        <p class="text-[rgba(255, 255, 255, 0.60)]">
+          Explore the prowess of hockey legends on <br> Sajib Hockey's website:
+          Meet all the heroes from the field.
+        </p>
       </div>
     </header>
     <!-- main container -->
@@ -315,7 +330,9 @@
         </div>
         <div class="mt-20 grid grid-rows-1 lg:grid-cols-2 gap-4">
           <!-- Products 1 -->
-          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
+          <div
+            class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl"
+          >
             <figure><img src="./Images/5.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -353,7 +370,9 @@
             </div>
           </div>
           <!-- Products 2 -->
-          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
+          <div
+            class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl"
+          >
             <figure><img src="./Images/6.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -374,9 +393,9 @@
                 World Cup Flags Football
               </h2>
               <p>
-                World Cup Flags Football at your fingertips. <br> Dive into the
-                action with our dynamic website <br> showcasing the best in the
-                sport.
+                World Cup Flags Football at your fingertips. <br />
+                Dive into the action with our dynamic website <br />
+                showcasing the best in the sport.
               </p>
               <div class="card-actions justify-start">
                 <h3 class="text-lg font-extrabold text-primary-color-btn">
@@ -392,7 +411,9 @@
             </div>
           </div>
           <!-- Products 3 -->
-          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
+          <div
+            class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl"
+          >
             <figure><img src="./Images/7.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -431,7 +452,9 @@
             </div>
           </div>
           <!-- Products 4 -->
-          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
+          <div
+            class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl"
+          >
             <figure><img src="./Images/8.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -469,7 +492,9 @@
             </div>
           </div>
           <!-- Products 5 -->
-          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
+          <div
+            class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl"
+          >
             <figure><img src="./Images/9.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -507,7 +532,9 @@
             </div>
           </div>
           <!-- Products 6 -->
-          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
+          <div
+            class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl"
+          >
             <figure><img src="./Images/10.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -547,7 +574,7 @@
         </div>
       </div>
       <!-- client question section -->
-      <div class="mt-20 lg:mt-40">
+      <div class="mt-20 m-1 lg:m-0 lg:mt-40">
         <div class="text-center">
           <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
             Clients Question
@@ -649,7 +676,7 @@
         </div>
       </div>
       <!-- get in touch section -->
-      <div class="mt-20 lg:mt-40">
+      <div class="m-1 lg:m-0 mt-20 lg:mt-40">
         <div class="text-center">
           <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
             Get In Touch
