small change in banner section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <div class="carousel w-full mt-5">
         <div id="slide1" class="carousel-item relative w-full lg:h-[85vh]">
           <img src="./Images/1.png" class="w-full" />
+          <!-- extra text 1-->
           <div
             class="hidden lg:block absolute right-0 bottom-0 p-7 mb-5 mr-5 bg-title-color rounded-lg"
           >
@@ -124,6 +125,18 @@
         </div>
         <div id="slide2" class="carousel-item relative w-full lg:h-[85vh]">
           <img src="./Images/2.png" class="w-full" />
+          <!-- extra text 2-->
+          <div
+            class="hidden lg:block absolute right-0 bottom-0 p-7 mb-5 mr-5 bg-title-color rounded-lg"
+          >
+            <h1 class="text-2xl font-extrabol text-white">
+              Meet all the heroes from the field
+            </h1>
+            <p class="text-[rgba(255, 255, 255, 0.60)]">
+              Explore the prowess of hockey legends on <br />
+              Sajib Hockey's website: Meet all the heroes from the field.
+            </p>
+          </div>
           <div
             class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
           >
@@ -133,6 +146,18 @@
         </div>
         <div id="slide3" class="carousel-item relative w-full lg:h-[85vh]">
           <img src="./Images/3.png" class="w-full" />
+          <!-- extra text 3 -->
+          <div
+            class="hidden lg:block absolute right-0 bottom-0 p-7 mb-5 mr-5 bg-title-color rounded-lg"
+          >
+            <h1 class="text-2xl font-extrabol text-white">
+              Meet all the heroes from the field
+            </h1>
+            <p class="text-[rgba(255, 255, 255, 0.60)]">
+              Explore the prowess of hockey legends on <br />
+              Sajib Hockey's website: Meet all the heroes from the field.
+            </p>
+          </div>
           <div
             class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
           >
@@ -142,6 +167,18 @@
         </div>
         <div id="slide4" class="carousel-item relative w-full lg:h-[85vh]">
           <img src="./Images/4.png" class="w-full" />
+          <!-- extra text 4 -->
+          <div
+            class="hidden lg:block absolute right-0 bottom-0 p-7 mb-5 mr-5 bg-title-color rounded-lg"
+          >
+            <h1 class="text-2xl font-extrabol text-white">
+              Meet all the heroes from the field
+            </h1>
+            <p class="text-[rgba(255, 255, 255, 0.60)]">
+              Explore the prowess of hockey legends on <br />
+              Sajib Hockey's website: Meet all the heroes from the field.
+            </p>
+          </div>
           <div
             class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
           >
