--- a/index.html
+++ b/index.html
@@ -129,12 +129,10 @@
           <div
             class="hidden lg:block absolute right-0 bottom-0 p-7 mb-5 mr-5 bg-title-color rounded-lg"
           >
-            <h1 class="text-2xl font-extrabol text-white">
-              Meet all the heroes from the field
-            </h1>
+            <h1 class="text-2xl font-extrabol text-white">About Us</h1>
             <p class="text-[rgba(255, 255, 255, 0.60)]">
-              Explore the prowess of hockey legends on <br />
-              Sajib Hockey's website: Meet all the heroes from the field.
+              Discover the passion driving Sajib Hockey's <br />
+              commitment to excellence in the world of field hockey.
             </p>
           </div>
           <div
@@ -150,12 +148,10 @@
           <div
             class="hidden lg:block absolute right-0 bottom-0 p-7 mb-5 mr-5 bg-title-color rounded-lg"
           >
-            <h1 class="text-2xl font-extrabol text-white">
-              Meet all the heroes from the field
-            </h1>
+            <h1 class="text-2xl font-extrabol text-white">Our Player's</h1>
             <p class="text-[rgba(255, 255, 255, 0.60)]">
-              Explore the prowess of hockey legends on <br />
-              Sajib Hockey's website: Meet all the heroes from the field.
+              Sajib Hockey's pride – showcasing the <br />
+              brilliance and prowess of our exceptional players.
             </p>
           </div>
           <div
@@ -172,11 +168,11 @@
             class="hidden lg:block absolute right-0 bottom-0 p-7 mb-5 mr-5 bg-title-color rounded-lg"
           >
             <h1 class="text-2xl font-extrabol text-white">
-              Meet all the heroes from the field
+              Our Products
             </h1>
             <p class="text-[rgba(255, 255, 255, 0.60)]">
-              Explore the prowess of hockey legends on <br />
-              Sajib Hockey's website: Meet all the heroes from the field.
+              Elevate your hockey experience with premium <br> gear and equipment
+              from Sajib Hockey
             </p>
           </div>
           <div
@@ -361,7 +357,7 @@
       </div>
       <!-- New products section-->
       <div class="p-1 lg:p-0 mt-20 lg:mt-40">
-        <div class="text-center">
+        <div class="text-center mt-20 lg:mt-0">
           <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
             Our New Products
           </h1>
@@ -851,11 +847,14 @@
     </main>
     <!-- footer -->
     <footer class="footer mt-20 lg:mt-40 p-10 bg-black text-white">
-      <aside class="flex flex-col justify-center items-center lg:items-start mx-auto lg:mx-0 ">
+      <aside
+        class="flex flex-col justify-center items-center lg:items-start mx-auto lg:mx-0"
+      >
         <header class="footer-title">Get In Touch</header>
         <p class="lg:text-left text-center">
-          Connect with Sajib Hockey's vibrant community. <br> Reach out for
-          inquiries, collaborations, and a <br> shared passion  for the game.
+          Connect with Sajib Hockey's vibrant community. <br />
+          Reach out for inquiries, collaborations, and a <br />
+          shared passion for the game.
         </p>
         <div class="flex items-center">
           <i class="fa-solid fa-envelope"></i>
@@ -867,7 +866,7 @@
         </div>
       </aside>
       <div class="grid grid-cols-2 gap-2 lg:grid-rows-1">
-        <nav class="flex flex-col ">
+        <nav class="flex flex-col">
           <header class="footer-title">Company</header>
           <a class="link link-hover">About us</a>
           <a class="link link-hover">Leadership</a>
@@ -875,7 +874,7 @@
           <a class="link link-hover">News & Article</a>
           <a class="link link-hover">Legal Notice</a>
         </nav>
-        <nav class="flex flex-col  ms-5 lg:ms-20">
+        <nav class="flex flex-col ms-5 lg:ms-20">
           <header class="footer-title">Support</header>
           <a class="link link-hover">Help Center</a>
           <a class="link link-hover">FAQ</a>
@@ -883,7 +882,9 @@
           <a class="link link-hover">Contact Us</a>
         </nav>
       </div>
-      <nav class="flex flex-col justify-center items-center lg:items-start mx-auto lg:mx-0">
+      <nav
+        class="flex flex-col justify-center items-center lg:items-start mx-auto lg:mx-0"
+      >
         <header class="footer-title">Services</header>
         <a class="link link-hover">Academy</a>
         <a class="link link-hover">Privacy policy</a>
