--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
     <!-- main container -->
     <main class="container mx-auto">
       <!-- Radial progress -->
-      <div class="mt-20 lg:mt-40">
+      <div class="mt-20 lg:mt-40 p-1 lg:p-0">
         <div class="text-center">
-          <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
+          <h1 class="text-2xl lg:text-4xl font-extrabold text-title-color">
             Professional Hockeys Club
           </h1>
           <p class="mt-3 text-base font-medium text-paragraph-color">
@@ -277,9 +277,9 @@
         </div>
       </div>
       <!-- programs section -->
-      <div class="mt-20 lg:mt-40">
+      <div class="mt-20 lg:mt-40 p-1 lg:p-0">
         <div class="text-center">
-          <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
+          <h1 class="text-2xl lg:text-4xl font-extrabold text-title-color">
             Professional Hockeys Club
           </h1>
           <p class="mt-3 text-base font-medium text-paragraph-color">
@@ -831,7 +831,7 @@
         </div>
       </div>
       <!-- social media section -->
-      <div class="mt-10 lg:mt-20 text-center">
+      <div class="mt-10 lg:mt-20 text-center p-1 lg:p-0">
         <h2 class="text-xl font-extrabold">Social Media</h2>
         <div>
           <a href=""><i class="mr-4 text-3xl mt-5 fa-brands fa-twitter"></i></a>
